# LearnLVGL_DesktopOrnament

./: CMakeLists.txt  README.md  partitions.csv
components/BSP/: CMakeLists.txt
components/BSP/GPIO/: gpio_driver.c  gpio_driver.h
components/BSP/I2C/: i2c_driver.c  i2c_driver.h
components/BSP/SPI/: spi_driver.c  spi_driver.h
components/BSP/WIFI/: wifi.c  wifi.h
components/Middlewares/: CMakeLists.txt
components/Middlewares/AID64/: AIDA64.c  AIDA64.h
components/Middlewares/LCD_Touch/: LCD_Touch.c  LCD_Touch.h
components/Middlewares/UI/custom/: custom.c  custom.h
components/Middlewares/Weather/: Weather.c  Weather.h
components/lvgl/: lv_conf.h
datasheet/: FT6336触摸屏文档.md  LCD_Touch文档.md  LCD屏幕方向调试指南.md
main/: CMakeLists.txt  main.c
note/: Transplant.md  esp32s3_special_transplant.md
